# PyBoy

./: .pre-commit-config.yaml  .secrets.baseline  README.md  pyproject.toml  setup.py
.devcontainer/: Dockerfile  devcontainer.json
bootrom/: logo_to_tiles.py
docs/examples/: gamewrapper_kirby.py  gamewrapper_mario.py  gamewrapper_tetris.py
examples/: gamewrapper_kirby.py  gamewrapper_mario.py  gamewrapper_tetris.py
font/: makefont.py
pyboy/: __main__.py  logger.py  openai_gym.py  pyboy.py  utils.py
pyboy/botsupport/: manager.py  screen.py  sprite.py  tile.py  tilemap.py
pyboy/core/: bootrom.py  cpu.py  interaction.py  lcd.py  mb.py  opcodes.py  opcodes_gen.py  ram.py  sound.py  timer.py
pyboy/core/cartridge/: base_mbc.py  cartridge.py  mbc1.py  mbc2.py  mbc3.py  mbc5.py  rtc.py
pyboy/plugins/: auto_pause.py  base_plugin.py  debug.py  disable_input.py  game_wrapper_kirby_dream_land.py  game_wrapper_super_mario_land.py  game_wrapper_tetris.py  manager.py  manager_gen.py  record_replay.py  rewind.py  screen_recorder.py  screenshot_recorder.py  window_dummy.py  window_headless.py  window_open_gl.py  window_sdl2.py
tests/: conftest.py  test_acid_cgb.py  test_acid_dmg.py  test_basics.py  test_blargg.py  test_examples.py  test_external_api.py  test_game_wrapper_mario.py  test_magen.py  test_mario_rl.py  test_mooneye.py  test_openai_gym.py  test_pyboy_lcd.py  test_replay.py  test_rewind.py  test_rtc3test.py  test_samesuite.py  test_shonumi.py  test_states.py  test_tetris_ai.py  test_windows.py
